# OnlineFoodOrderingSystem

./: CMakeLists.txt  README.md  database_setup_script.sql
backend/include/: db_connecton.h  menu_controller.h  order_controller.h  restaurant_controller.h  user_controller.h
backend/src/: db_connection.cpp  main.cpp  menu_controller.cpp  order_controller.cpp  restaurant_controller.cpp  user_controller.cpp
frontend/: dashboard.html  index.html  login.html  register.html
frontend/css/: dashboard.css  login.css  register.css  styles.css
frontend/js/: dashboard.js  login.js  main.js  register.js
